# PTI

./: pyproject.toml  visualize_results.py
configs/: evaluation_config.py  global_config.py  hyperparameters.py  paths_config.py
criteria/: l2_loss.py  localitly_regulizer.py
dnnlib/: __init__.py  util.py
editings/: ganspace.py  latent_editor.py
evaluation/: experiment_setting_creator.py  qualitative_edit_comparison.py
models/StyleCLIP/criteria/: id_loss.py
models/StyleCLIP/global_directions/: GUI.py  GenerateImg.py  GetCode.py  GetGUIData.py  Inference.py  MapTS.py  PlayInteractively.py  SingleChannel.py  manipulate.py
models/StyleCLIP/global_directions/dnnlib/: __init__.py  util.py
models/StyleCLIP/global_directions/utils/: editor.py  train_boundary.py  visualizer.py
models/StyleCLIP/mapper/: latent_mappers.py  styleclip_mapper.py
models/StyleCLIP/mapper/datasets/: latents_dataset.py
models/StyleCLIP/mapper/options/: test_options.py  (+1 more)
models/StyleCLIP/optimization/: run_optimization.py
models/e4e/: psp.py
models/e4e/encoders/: model_irse.py  psp_encoders.py
models/e4e/stylegan2/: model.py
notebooks/: align_data.ipynb
scripts/: latent_editor_wrapper.py  pti_styleclip.py  run_pti.py
scripts/latent_creators/: base_latent_creator.py  e4e_latent_creator.py  sg2_latent_creator.py  sg2_plus_latent_creator.py
training/coaches/: base_coach.py  multi_id_coach.py  single_id_coach.py
training/projectors/: w_plus_projector.py  w_projector.py
utils/: ImagesDataset.py  align_data.py  alignment.py  data_utils.py  log_utils.py  models_utils.py
(+16 files in other folders)
